RESOLVED FIXED302148
[blocks-in-inline] Assert in fast/inline/outline-with-continuation-assert.html
https://bugs.webkit.org/show_bug.cgi?id=302148
Summary [blocks-in-inline] Assert in fast/inline/outline-with-continuation-assert.html
Antti Koivisto
Reported 2025-11-07 01:45:37 PST
fix
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-07 01:45:52 PST
Antti Koivisto
Comment 2 2025-11-07 01:56:10 PST
EWS
Comment 3 2025-11-07 05:39:44 PST
Committed 302721@main (e8166aff20a8): <https://commits.webkit.org/302721@main> Reviewed commits have been landed. Closing PR #53581 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.