[blocks-in-inline] Assert in fast/inline/outline-with-continuation-assert.html https://bugs.webkit.org/show_bug.cgi?id=302148 rdar://164239880

Reviewed by Alan Baradlay.

* Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.cpp:
(WebCore::LayoutIntegration::layoutWithFormattingContextForBlockInInline):

Not all boxes with display:block are RenderBlockFlows.

* Source/WebCore/rendering/updating/RenderTreeBuilderBlock.cpp:
(WebCore::RenderTreeBuilder::Block::createAnonymousBlockWithStyle):
* Source/WebCore/rendering/updating/RenderTreeBuilderBlock.h:
* Source/WebCore/rendering/updating/RenderTreeBuilderInline.cpp:
(WebCore::RenderTreeBuilder::Inline::wrapRunsOfBlocksInAnonymousBlock):

Similarly loosen typing to RenderBox for block run as they may have collapsing margins too.

Canonical link: https://commits.webkit.org/302721@main