Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.cpp
@@ -70,20 +70,18 @@ void layoutWithFormattingContextForBox(const Layout::ElementBox& box, std::optio
 
 void layoutWithFormattingContextForBlockInInline(const Layout::ElementBox& block, LayoutPoint blockLogicalTopLeft, Layout::BlockLayoutState& parentBlockLayoutState, Layout::LayoutState& layoutState)
 {
-    auto* renderer = dynamicDowncast<RenderBlockFlow>(*block.rendererForIntegration());
-    if (!renderer) {
-        ASSERT_NOT_REACHED();
-        return;
-    }
-
     layoutWithFormattingContextForBox(block, { }, { }, layoutState);
-    ASSERT(!renderer->needsLayout());
+    ASSERT(!block.rendererForIntegration()->needsLayout());
 
-    if (!renderer->containsFloats() || renderer->createsNewFormattingContext())
+    auto* renderBlockFlow = dynamicDowncast<RenderBlockFlow>(*block.rendererForIntegration());
+    if (!renderBlockFlow)
+        return;
+
+    if (!renderBlockFlow->containsFloats() || renderBlockFlow->createsNewFormattingContext())
         return;
 
     auto& placedFloats = parentBlockLayoutState.placedFloats();
-    for (auto& floatingObject : *renderer->floatingObjectSet()) {
+    for (auto& floatingObject : *renderBlockFlow->floatingObjectSet()) {
         if (!floatingObject->isDescendant())
             continue;
 
